# TUD_computational_group_theory

include/: arch_graph.h
source/: CMakeLists.txt  arch_graph.cc
test/source/: arch_graph_test.cc
